change module name, tweaks for handling openai gym

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Shard"
+name = "Crux"
 uuid = "e51cc422-768a-4345-bb8e-2246287ae729"
 authors = ["Anthony Corso <anthonycorso92@gmail.com>"]
 version = "0.1.0"
