--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,6 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-POMDPPolicies = "182e52fb-cfd0-5e46-8c26-fd0667c990f4"
 POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -23,3 +22,19 @@ TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 ValueHistories = "98cad3c8-aec3-5f06-8e41-884608649ab7"
 WeightsAndBiasLogger = "71805093-c1fc-4af5-8d0a-8dde53c6ac46"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[compat]
+CUDA = "3"
+ColorSchemes = "3"
+Distributions = "0.25"
+Flux = "0.13"
+Images = "0.25"
+POMDPTools = "0.1"
+POMDPs = "0.9"
+Parameters = "0.12"
+Plots = "1"
+StatsBase = "0.33"
+TensorBoardLogger = "0.1"
+ValueHistories = "0.5"
+WeightsAndBiasLogger = "0.5"
+Zygote = "0.6"
