--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ POMDPTools = "0.1"
 POMDPs = "0.9"
 Parameters = "0.12"
 Plots = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 TensorBoardLogger = "0.1"
 ValueHistories = "0.5"
 WeightsAndBiasLogger = "0.5"
