--- a/Project.toml
+++ b/Project.toml
@@ -16,18 +16,20 @@ POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 ValueHistories = "98cad3c8-aec3-5f06-8e41-884608649ab7"
 WeightsAndBiasLogger = "71805093-c1fc-4af5-8d0a-8dde53c6ac46"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
-CUDA = "3, 4"
+CUDA = "3, 4, 5"
 ColorSchemes = "3"
 Distributions = "0.25"
-Flux = "0.13"
+Flux = "0.14"
 Images = "0.25"
 POMDPTools = "0.1"
 POMDPs = "0.9"
