added compat for julia and made compat more lenient

--- a/Project.toml
+++ b/Project.toml
@@ -26,17 +26,20 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
-CUDA = "3, 4, 5"
-ColorSchemes = "3"
+julia = ">= 1.6"
+Reexport = ">= 1.0"
+CUDA = ">= 3"
+cuDNN >= ">= 0.0"
+ColorSchemes = ">= 3"
 Distributions = "0.25"
-Flux = "0.14"
-Images = "0.25"
-POMDPTools = "0.1"
-POMDPs = "0.9"
-Parameters = "0.12"
-Plots = "1"
-StatsBase = "0.33, 0.34"
-TensorBoardLogger = "0.1"
-ValueHistories = "0.5"
-WeightsAndBiasLogger = "0.5"
-Zygote = "0.6"
+Flux = ">= 0.14"
+Images = ">= 0.25"
+POMDPTools = ">= 0.1"
+POMDPs = ">= 0.9"
+Parameters = ">= 0.12"
+Plots = ">= 1"
+StatsBase = >= 0.33"
+TensorBoardLogger = ">= 0.1"
+ValueHistories = ">= 0.5"
+WeightsAndBiasLogger = ">= 0.5"
+Zygote = ">= 0.6"
