fixed compat typo

--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 julia = ">= 1.6"
 Reexport = ">= 1.0"
 CUDA = ">= 3"
-cuDNN >= ">= 0.0"
+cuDNN = ">= 0.0"
 ColorSchemes = ">= 3"
 Distributions = "0.25"
 Flux = ">= 0.14"
@@ -38,7 +38,7 @@ POMDPTools = ">= 0.1"
 POMDPs = ">= 0.9"
 Parameters = ">= 0.12"
 Plots = ">= 1"
-StatsBase = >= 0.33"
+StatsBase = ">= 0.33"
 TensorBoardLogger = ">= 0.1"
 ValueHistories = ">= 0.5"
 WeightsAndBiasLogger = ">= 0.5"
