Fixed upper bound problem on compat entries

--- a/Project.toml
+++ b/Project.toml
@@ -27,19 +27,19 @@ cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
 julia = ">= 1.6"
-Reexport = ">= 1.0"
-CUDA = ">= 3"
-cuDNN = ">= 0.0"
-ColorSchemes = ">= 3"
+Reexport = "1"
+CUDA = "3, 4, 5"
+cuDNN = "0"
+ColorSchemes = "3"
 Distributions = "0.25"
-Flux = ">= 0.14"
-Images = ">= 0.25"
-POMDPTools = ">= 0.1"
-POMDPs = ">= 0.9"
+Flux = "0.14"
+Images = "0"
+POMDPTools = "0"
+POMDPs = "0"
 Parameters = ">= 0.12"
-Plots = ">= 1"
-StatsBase = ">= 0.33"
-TensorBoardLogger = ">= 0.1"
-ValueHistories = ">= 0.5"
-WeightsAndBiasLogger = ">= 0.5"
-Zygote = ">= 0.6"
+Plots = "1"
+StatsBase = "0.33"
+TensorBoardLogger = "0.1"
+ValueHistories = "0.5"
+WeightsAndBiasLogger = "0.5"
+Zygote = "0.6"
