added upper bound to Parameters

--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ Flux = "0.14"
 Images = "0"
 POMDPTools = "0"
 POMDPs = "0"
-Parameters = ">= 0.12"
+Parameters = "0.12"
 Plots = "1"
 StatsBase = "0.33"
 TensorBoardLogger = "0.1"
