--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
-julia = ">= 1.6"
+julia = "1.6 - 1.10"
 Reexport = "1"
 CUDA = "3, 4, 5"
 cuDNN = "1"
