--- a/Project.toml
+++ b/Project.toml
@@ -26,10 +26,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
-julia = "1.6 - 1.10"
-Reexport = "1"
 CUDA = "3, 4, 5"
-cuDNN = "1"
 ColorSchemes = "3"
 Distributions = "0.25"
 Flux = "0.14"
@@ -38,8 +35,12 @@ POMDPTools = "0.1"
 POMDPs = "0.9"
 Parameters = "0.12"
 Plots = "1"
+Reexport = "1"
+Statistics = "1"
 StatsBase = "0.33"
 TensorBoardLogger = "0.1"
 ValueHistories = "0.5"
 WeightsAndBiasLogger = "0.5"
 Zygote = "0.6"
+cuDNN = "1"
+julia = "1.6 - 1.10"
