--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Crux"
 uuid = "e51cc422-768a-4345-bb8e-2246287ae729"
 authors = ["Anthony Corso <anthonycorso92@gmail.com>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -33,7 +33,7 @@ cuDNN = "1"
 ColorSchemes = "3"
 Distributions = "0.25"
 Flux = "0.14"
-Images = "0.26"
+Images = "0.25, 0.26"
 POMDPTools = "0.1"
 POMDPs = "0.9"
 Parameters = "0.12"
