--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# macOS files
+.DS_Store
