Added initial documentation

--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ Distributions = "0.25"
 Flux = "0.14"
 Images = "0.25, 0.26"
 POMDPTools = "0.1"
-POMDPs = "0.9"
+POMDPs = "0.9, 1.0"
 Parameters = "0.12"
 Plots = "1"
 Reexport = "1"
