--- a/Project.toml
+++ b/Project.toml
@@ -21,9 +21,14 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 ValueHistories = "98cad3c8-aec3-5f06-8e41-884608649ab7"
-WeightsAndBiasLogger = "71805093-c1fc-4af5-8d0a-8dde53c6ac46"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
+
+[weakdeps]
+WeightsAndBiasLogger = "71805093-c1fc-4af5-8d0a-8dde53c6ac46"
+
+[extensions]
+WBLoggerExt = "WeightsAndBiasLogger"
 
 [compat]
 CUDA = "3, 4, 5"
@@ -40,7 +45,6 @@ Statistics = "1"
 StatsBase = "0.33, 0.34"
 TensorBoardLogger = "0.1"
 ValueHistories = "0.5"
-WeightsAndBiasLogger = "0.5"
 Zygote = "0.6"
 cuDNN = "1"
 julia = "1.6"
@@ -50,10 +54,10 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
 POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
+POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
