Added standalone (non-POMDPGym) example, updated docs

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
 POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -36,6 +37,7 @@ ColorSchemes = "3"
 Distributions = "0.25"
 Flux = "0.14"
 Images = "0.25, 0.26"
+POMDPModels = "0.4"
 POMDPTools = "0.1"
 POMDPs = "0.9, 1.0"
 Parameters = "0.12"
